Fixed CSS bug in widgetpool where icon was overlapping the disk name in the selection grid

--- a/src/app/core/components/widgets/widgetpool/widgetpool.component.css
+++ b/src/app/core/components/widgets/widgetpool/widgetpool.component.css
@@ -91,6 +91,7 @@
   width:100%;
   position:absolute;
   font-size:160%;
+  top:0;
 }
 
 .disk-icon,
